test/regexp_facade/invalid/InvalidOptions.hx
import ruby.Regexp;

class InvalidOptions {
	static function main():Void {
		new Regexp("ruby", 1);
	}
}
